--- a/rnames_app/templates/rnames_app/name_list.html
+++ b/rnames_app/templates/rnames_app/name_list.html
@@ -1,5 +1,9 @@
+{% load static %}
 <html>
     <head>
+        <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+        <link href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
+        <link rel="stylesheet" href="{% static 'css/rnames_app.css' %}">
         <title>RNames</title>
     </head>
     <body>
