--- a/rnames_app/templates/rnames_app/base.html
+++ b/rnames_app/templates/rnames_app/base.html
@@ -4,11 +4,15 @@
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
         <link href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
         <link rel="stylesheet" href="{% static 'css/rnames_app.css' %}">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <title>RNames</title>
     </head>
     <body>
         <div class="page-header">
-            <h1><a href="/">Django Girls Blog</a></h1>
+            {% if user.is_authenticated %}
+              <a href="{% url 'name_new' %}" class="top-menu"><span class="fa fa-plus"></span></a>
+            {% endif %}
+            <h1><a href="/">RNames</a></h1>
         </div>
         <div class="content container">
             <div class="row">
