--- a/rnames_app/templates/rnames_app/name_list.html
+++ b/rnames_app/templates/rnames_app/name_list.html
@@ -1,12 +1,25 @@
 {% extends 'rnames_app/base.html' %}
 
 {% block content %}
+    <h1>Manage Names</h1>
+    {% if user.is_authenticated %}
+      <a href="{% url 'name_new' %}" class="top-menu"><span class="fa fa-plus">Add Name</span></a>
+    {% endif %}
+    <table>
+      <tr>
+        <th>Name</th>
+        <th>Created</th>
+        <th>Modified</th>
+      </tr>
     {% for name in names %}
-        <div class="post">
-            <div class="date">
-                {{ name.created_at }}
-            </div>
-            <h2><a href="{% url 'name_detail' pk=name.pk %}">{{ name.name }}</a></h2>
-        </div>
+    <tr>
+      <td><a href="{% url 'name_detail' pk=name.pk %}">{{ name.name }}</a></td>
+      <td class="date">{{ name.created_on }}</td>
+      <td class="date">{{ name.modified_on }}</td>
+      <td class="fa fa-plus">Add Name</td>
+      <td class="tooltip">Hover over me
+        <span class="tooltiptext">Tooltip text</span>
+      </td>
+    </tr>
     {% endfor %}
 {% endblock %}
