Changes to all html

--- a/rnames_app/templates/rnames_app/base_generic.html
+++ b/rnames_app/templates/rnames_app/base_generic.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<!-- Write your comments here -->
 <head>
 <script src="https://use.fontawesome.com/baa70f3cd3.js"></script>
 {% block title %}
