--- a/rnames_app/templates/rnames_app/location_detail.html
+++ b/rnames_app/templates/rnames_app/location_detail.html
@@ -1,6 +1,7 @@
-{% extends 'rnames_app/base_generic.html' %}
+{% extends 'base_generic.html' %}
 
 {% block content %}
+<!-- Write your comments here -->
 <article>
     <div class="location">
         {% if location.created_at %}
