--- a/rnames_app/templates/rnames_app/name_confirm_delete.html
+++ b/rnames_app/templates/rnames_app/name_confirm_delete.html
@@ -1,7 +1,8 @@
-{% extends "rnames_app/base_generic.html" %}
+{% extends "base_generic.html" %}
 
 {% block content %}
 
+<!-- Write your comments here -->
 <h1>Delete Name</h1>
 
 <p>Are you sure you want to delete the Name: {{ name }}?</p>
