--- a/rnames_app/templates/rnames_app/reference_edit.html
+++ b/rnames_app/templates/rnames_app/reference_edit.html
@@ -1,6 +1,7 @@
-{% extends 'rnames_app/base_generic.html' %}
+{% extends 'base_generic.html' %}
 
 {% block content %}
+<!-- Write your comments here -->
   <article>
       <h2>Edit Reference</h2>
       <form method="POST" class="reference-form">{% csrf_token %}
