--- a/rnames_app/templates/rnames_app/user_list.html
+++ b/rnames_app/templates/rnames_app/user_list.html
@@ -1,6 +1,7 @@
 {% extends 'rnames_app/base.html' %}
 
 {% block content %}
+<!-- Write your comments here -->
   <form method="get">
     {{ filter.form.as_p }}
     <button type="submit">Search</button>
