--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -1,7 +1,7 @@
 {% extends "base_generic.html" %}
 
 {% block content %}
-
+<!-- Write your comments here -->
     {% if validlink %}
         <p>Please enter (and confirm) your new password.</p>
         <form action="" method="post">
