--- a/rnames_app/templates/rnames_app/base.html
+++ b/rnames_app/templates/rnames_app/base.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <title>RNames</title>
     </head>
+<!-- Write your comments here -->
     <style>
     /* Tooltip container */
     .tooltip {
