--- a/rnames_app/templates/rnames_app/old_base.html
+++ b/rnames_app/templates/rnames_app/old_base.html
@@ -1,5 +1,6 @@
 {% load static %}
 <html>
+<!-- Write your comments here -->
     <head>
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
         <link href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
