--- a/rnames_app/templates/rnames_app/qualifier_confirm_delete.html
+++ b/rnames_app/templates/rnames_app/qualifier_confirm_delete.html
@@ -1,6 +1,7 @@
-{% extends "rnames_app/base_generic.html" %}
+{% extends "base_generic.html" %}
 
 {% block content %}
+<!-- Write your comments here -->
 
 {% if user.is_authenticated %}
   <h1>Delete Qualifier</h1>
