--- a/rnames_app/templates/rnames_app/qualifier_edit.html
+++ b/rnames_app/templates/rnames_app/qualifier_edit.html
@@ -1,6 +1,7 @@
-{% extends 'rnames_app/base_generic.html' %}
+{% extends 'base_generic.html' %}
 
 {% block content %}
+<!-- Write your comments here -->
   <article>
     {% if user.is_authenticated %}
       <h2>Edit Qualifier</h2>
