--- a/rnames_app/templates/rnames_app/rnames_detail.html
+++ b/rnames_app/templates/rnames_app/rnames_detail.html
@@ -1,7 +1,7 @@
-{% extends "rnames_app\base_generic.html" %}
+{% extends "base_generic.html" %}
 
 {% block content %}
-
+<!-- Write your comments here -->
 <article>
   Combined with an r-code (which will be published separately) the database is a tool to construct a list of names that are considered to be time equivalent in a certain framework. The algorithm of the correlation is based on explicit rules (e.g., "use the most actual opinion" or "use the best compromise between existing opinions").
 
