--- a/rnames_app/templates/rnames_app/structuredname_detail.html
+++ b/rnames_app/templates/rnames_app/structuredname_detail.html
@@ -1,6 +1,7 @@
-{% extends 'rnames_app/base_generic.html' %}
+{% extends 'base_generic.html' %}
 
 {% block content %}
+<!-- Write your comments here -->
 <article>
     <div class="structuredname">
         {% if structuredname.created_at %}
