--- a/rnames_app/templates/rnames_app/structuredname_list.html
+++ b/rnames_app/templates/rnames_app/structuredname_list.html
@@ -1,10 +1,10 @@
-{% extends "rnames_app\base_generic.html" %}
+{% extends "base_generic.html" %}
 {% block title %}
   <title>Manage Structured Names</title>
 {% endblock %}
 
 {% block content %}
-
+<!-- Write your comments here -->
 <article>
   <form action="" method="get">
       {{ filter.form.as_p }}
