--- a/templates/registration/logged_out.html
+++ b/templates/registration/logged_out.html
@@ -1,6 +1,7 @@
-{% extends "rnames_app\base_generic.html" %}
+{% extends "base_generic.html" %}
 
 {% block nav %}
+<!-- Write your comments here -->
 <p>Logged out!</p>
 
 <a href="{% url 'login'%}">Click here to login again.</a>
