--- a/rnames_app/templates/rnames_app/base_generic.html
+++ b/rnames_app/templates/rnames_app/base_generic.html
@@ -10,9 +10,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="RNames is a stratigraphical database">
 <style>
-* {
-  box-sizing: border-box;
-}
+* {box-sizing: border-box}
 
 body {
   font-family: Arial, Helvetica, sans-serif;
@@ -93,7 +91,33 @@ td, th {
 tr:nth-child(even) {
   background-color: #dddddd;
 }
+/* Begin style from https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_full_page_tabs*/
+/* Style tab links */
+.tablink {
+  background-color: #555;
+  color: white;
+  float: left;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 14px 16px;
+  font-size: 17px;
+  width: 25%;
+}
 
+.tablink:hover {
+  background-color: #777;
+}
+
+/* Style the tab content (and add height:100% for full page content) */
+.tabcontent {
+  color: white;
+  display: none;
+  padding: 100px 20px;
+  height: 100%;
+}
+
+/* End style from https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_full_page_tabs*/
 </style>
 </head>
 <body>
