--- a/rnames_app/templates/rnames_app/reference_detail.html
+++ b/rnames_app/templates/rnames_app/reference_detail.html
@@ -3,36 +3,63 @@
 {% block content %}
 <!-- Write your comments here -->
 <article>
-    <div class="reference">
-        {% if reference.created_at %}
-            <div class="date">
-                {{ reference.created_at }}
-            </div>
-        {% endif %}
-        {% if user.is_authenticated %}
-          <a class="btn btn-default" href="{% url 'reference-edit' pk=reference.pk %}"><span class="fa fa-pencil"></span></a>
-        {% endif %}
-        <h2>{{ reference }}</h2>
-        <h3>Referenced Relations</h3>
-        <table style="width:100%">
-          <tr>
-            <th>Name 1</th>
-            <th>Name 2</th>
-            <th>Belongs to</th>
-            <th>Action</th>
-          </tr>
-          {% for relation in reference.relation_set.all %}
-          <tr>
-            <td>{{ relation.name_one.name }} - {{ relation.name_one.qualifier.qualifier_name }} - {{ relation.name_one.location }}</td>
-            <td>{{ relation.name_two.name }} - {{ relation.name_two.qualifier.qualifier_name }} - {{ relation.name_two.location }}</td>
-            <td>{% if relation.belongs_to == 0 %}No{% else %}Yes{% endif %}</td>
-            <td>
-              <a class="btn btn-default" href="{% url 'relation-detail' pk=relation.pk %}"><span class="fa fa-search"></span></a>
-              <a class="btn btn-default" href="{% url 'relation-edit' pk=relation.pk %}"><span class="fa fa-pencil-square-o"></span></a>
-              <a class="btn btn-default" href="{% url 'relation-delete' pk=relation.pk %}"><span class="fa  fa-trash-o"></span></a>
-            </td>          </tr>
-          {% endfor %}
-        </table>
-    </div>
+  <!-- Write your comments here -->
+  <button class="tablink" onclick="openPage('Home', this, 'red')">Home</button>
+  <button class="tablink" onclick="openPage('News', this, 'green')" id="defaultOpen">News</button>
+
+  <div id="Home" class="tabcontent">
+    {% if user.is_authenticated %}
+      <a class="btn btn-default" href="{% url 'reference-edit' pk=reference.pk %}"><span class="fa fa-pencil"></span></a>
+    {% endif %}
+    <h2>{{ reference }}</h2>
+  </div>
+
+  <div id="News" class="tabcontent">
+    <h3>Referenced Relations</h3>
+    <table style="width:100%">
+      <tr>
+        <th>Name 1</th>
+        <th>Name 2</th>
+        <th>Belongs to</th>
+        <th>Action</th>
+      </tr>
+      {% for relation in reference.relation_set.all %}
+      <tr>
+        <td>{{ relation.name_one.name }} - {{ relation.name_one.qualifier.qualifier_name }} - {{ relation.name_one.location }}</td>
+        <td>{{ relation.name_two.name }} - {{ relation.name_two.qualifier.qualifier_name }} - {{ relation.name_two.location }}</td>
+        <td>{% if relation.belongs_to == 0 %}No{% else %}Yes{% endif %}</td>
+        <td>
+          <a class="btn btn-default" href="{% url 'relation-detail' pk=relation.pk %}"><span class="fa fa-search"></span></a>
+          <a class="btn btn-default" href="{% url 'relation-edit' pk=relation.pk %}"><span class="fa fa-pencil-square-o"></span></a>
+          <a class="btn btn-default" href="{% url 'relation-delete' pk=relation.pk %}"><span class="fa  fa-trash-o"></span></a>
+        </td>          </tr>
+      {% endfor %}
+    </table>
+  </div>
+
+  <div id="Contact" class="tabcontent">
+    <h3>Contact</h3>
+    <p>Get in touch, or swing by for a cup of coffee.</p>
+  </div>
+
+  <script>
+  function openPage(pageName,elmnt,color) {
+    var i, tabcontent, tablinks;
+    tabcontent = document.getElementsByClassName("tabcontent");
+    for (i = 0; i < tabcontent.length; i++) {
+      tabcontent[i].style.display = "none";
+    }
+    tablinks = document.getElementsByClassName("tablink");
+    for (i = 0; i < tablinks.length; i++) {
+      tablinks[i].style.backgroundColor = "";
+    }
+    document.getElementById(pageName).style.display = "block";
+    elmnt.style.backgroundColor = color;
+  }
+
+  // Get the element with id="defaultOpen" and click on it
+  document.getElementById("defaultOpen").click();
+  </script>
+  <!-- Write your comments here -->
   </article>
 {% endblock %}
