Changed the templates directory contents

--- a/rnames_app/templates/reference_list.html
+++ b/rnames_app/templates/reference_list.html
@@ -1,4 +1,4 @@
-{% extends "rnames_app/base_generic.html" %}
+{% extends "base_generic.html" %}
 
 {% block content %}
 <!-- Write your comments here -->
