--- a/rnames_app/templates/relation_list.html
+++ b/rnames_app/templates/relation_list.html
@@ -17,7 +17,7 @@
   {% endif %}
 
   {% if page_obj %}
-    <table style="width:100%">
+    <table class="w3-row">
       <tr>
         <th>Name 1</th>
         <th>Name 2</th>
