--- a/rnames_app/templates/relation_edit.html
+++ b/rnames_app/templates/relation_edit.html
@@ -1,5 +1,10 @@
 {% extends 'base_generic.html' %}
 
+{% block script %}
+<!-- {{ form.media.js }} used for Django select2 -->
+{{ form.media.js }}
+{% endblock %}
+
 {% block content %}
 <!-- Write your comments here -->
   <article>
@@ -9,6 +14,11 @@
           {{ form.as_p }}
           <button type="submit" class="save btn btn-default">Save</button>
       </form>
+<!--      <form method="POST" class="relation-form">{% csrf_token %}
+          {{ form.name_one }}
+          <button type="submit" class="save btn btn-default">Save</button>
+      </form>
+-->
       <p><a href="{{request.path}}">Back</a></p>
     {% else %}
       <p><a href="{% url 'login'%}?next={{request.path}}">Please login first</a></p>
