--- a/rnames_app/templates/qualifier_detail.html
+++ b/rnames_app/templates/qualifier_detail.html
@@ -14,7 +14,7 @@
           <a class="btn btn-default" href="{% url 'qualifier-delete' pk=qualifier.pk %}"><span class="fa  fa-trash-o"></span></a>
         {% endif %}
         <h2>Qualifier</h2>
-        <table style="width:100%">
+        <table class="w3-table-all">
           <tr>
             <td>Qualifier Name</td>
             <td>{{ qualifier.qualifier_name }}</td>
