--- a/rnames_app/templates/relation_edit.html
+++ b/rnames_app/templates/relation_edit.html
@@ -11,7 +11,9 @@
     {% if user.is_authenticated %}
       <h2>Edit Relation</h2>
       <form method="POST" class="relation-form">{% csrf_token %}
-          {{ form.as_p }}
+        <table class="w3-table-all">
+          {{ form.as_table }}
+        </table>
           <button type="submit" class="save btn btn-default">Save</button>
       </form>
 <!--      <form method="POST" class="relation-form">{% csrf_token %}
