--- a/rnames_app/templates/name_detail.html
+++ b/rnames_app/templates/name_detail.html
@@ -13,7 +13,15 @@
           <a class="btn btn-default" href="{% url 'name-edit' pk=name.pk %}"><span class="fa fa-pencil-square-o"></span></a>
           <a class="btn btn-default" href="{% url 'name-delete' pk=name.pk %}"><span class="fa  fa-trash-o"></span></a>
         {% endif %}
-        <h2>{{ name.name }}</h2>
+        <h2>Name: {{ name.name }}</h2>
+
+        <table class="w3-table-all">
+          <tr>
+            <td>Name</td>
+            <td>{{ name.name }}</td>
+          </tr>
+        </table>
+
         <h3>Name refers to the following Stratigraphic units:</h3>
         <table class="w3-table-all">
           <tr>
