--- a/rnames_app/templates/rnames_app/location_confirm_delete.html
+++ b/rnames_app/templates/rnames_app/location_confirm_delete.html
@@ -1,15 +1,15 @@
-{% extends "base_generic.html" %}
-
-{% block content %}
+{% extends "base_generic.html" %} {% block content %}
 <!-- Write your comments here -->
+{% if user.is_authenticated %}
+  <h1>Delete Location</h1>
 
-<h1>Delete Location</h1>
+  <p>Are you sure you want to delete the Location: <b><i>{{ location }}</i></b>?</p>
 
-<p>Are you sure you want to delete the Location: {{ location }}?</p>
-
-<form action="" method="POST">
-  {% csrf_token %}
-  <input type="submit" action="" value="Yes, delete." />
-</form>
-
-{% endblock %}
+  <form action="" method="POST">
+      {% csrf_token %}
+      <input type="submit" action="" value="Yes, delete." />
+  </form>
+  <p><a href="{{request.META.HTTP_REFERER}}">Go back</a></p>
+{% else %}
+  <p><a href="{% url 'login'%}?next={{request.path}}">Please login first</a></p>
+{% endif %} {% endblock %}
