--- a/rnames_app/templates/location_detail.html
+++ b/rnames_app/templates/location_detail.html
@@ -13,10 +13,14 @@
           <a class="btn btn-default" href="{% url 'location-edit' pk=location.pk %}"><span class="fa fa-pencil-square-o"></span></a>
           <a class="btn btn-default" href="{% url 'location-delete' pk=location.pk %}"><span class="fa  fa-trash-o"></span></a>
         {% endif %}
-        <h2>Location: {{ location.name }}</h2>
+        <p><a href="{{request.META.HTTP_REFERER}}">Go back</a></p>
+        <header style="display:none;">
+            <h2>RNames - Location: {{ location.id }}</h2>
+         </header>
         <table class="w3-table-all">
+          <caption>Location: {{ location.id }}</caption>
           <tr>
-            <td>Location</td>
+            <th>Location</th>
             <td>{{ location.name }}</td>
           </tr>
         </table>
