--- a/rnames_app/templates/qualifier_detail.html
+++ b/rnames_app/templates/qualifier_detail.html
@@ -13,18 +13,22 @@
           <a class="btn btn-default" href="{% url 'qualifier-edit' pk=qualifier.pk %}"><span class="fa fa-pencil-square-o"></span></a>
           <a class="btn btn-default" href="{% url 'qualifier-delete' pk=qualifier.pk %}"><span class="fa  fa-trash-o"></span></a>
         {% endif %}
-        <h2>Qualifier</h2>
+        <p><a href="{{request.META.HTTP_REFERER}}">Go back</a></p>
+        <header style="display:none;">
+            <h2>RNames - Qualifier: {{ qualifier.id }}</h2>
+         </header>
         <table class="w3-table-all">
+          <caption>Qualifier: {{ qualifier.id }}</caption>
           <tr>
-            <td>Qualifier Name</td>
+            <th>Qualifier Name</th>
             <td>{{ qualifier.qualifier_name }}</td>
           </tr>
           <tr>
-            <td>Stratigraphic Qualifier</td>
+            <th>Stratigraphic Qualifier</th>
             <td>{{ qualifier.stratigraphic_qualifier }}</td>
           </tr>
           <tr>
-            <td>Level</td>
+            <th>Level</th>
             <td>{{ qualifier.level }}</td>
           </tr>
         </table>
