--- a/rnames_app/templates/rnames_app/relation_confirm_delete.html
+++ b/rnames_app/templates/rnames_app/relation_confirm_delete.html
@@ -11,7 +11,7 @@
     {% csrf_token %}
     <input type="submit" action="" value="Yes, delete." />
   </form>
-  <p><a href="{{request.path}}">Back</a></p>
+  <p><a href="{{request.META.HTTP_REFERER}}">Go back</a></p>
 {% else %}
   <p><a href="{% url 'login'%}?next={{request.path}}">Please login first</a></p>
 {% endif %}
