--- a/rnames_app/templates/rnames_app/stratigraphicqualifier_confirm_delete.html
+++ b/rnames_app/templates/rnames_app/stratigraphicqualifier_confirm_delete.html
@@ -1,9 +1,9 @@
 {% extends "base_generic.html" %} {% block content %}
 <!-- Write your comments here -->
 {% if user.is_authenticated %}
-  <h1>Delete Qualifier</h1>
+  <h1>Delete Stratigraphic Qualifier</h1>
 
-  <p>Are you sure you want to delete the Qualifier: <b><i>{{ qualifier.qualifier_name }}</i></b>?</p>
+  <p>Are you sure you want to delete the Stratigraphic Qualifier: <b><i>{{ name }}</i></b>?</p>
 
   <form action="" method="POST">
       {% csrf_token %}
