--- a/rnames_app/templates/stratigraphic_qualifier_edit.html
+++ b/rnames_app/templates/stratigraphic_qualifier_edit.html
@@ -4,8 +4,8 @@
 <!-- Write your comments here -->
   <article>
     {% if user.is_authenticated %}
-      <h2>Add/Edit Name</h2>
-      <form method="POST" class="name-form">{% csrf_token %}
+      <h2>Edit Stratigraphic Qualifier</h2>
+      <form method="POST" class="stratigraphicqualifier-form">{% csrf_token %}
           {{ form.as_p }}
           <button type="submit" class="save btn btn-default">Save</button>
       </form>
