--- a/rnames_app/templates/structuredname_detail.html
+++ b/rnames_app/templates/structuredname_detail.html
@@ -7,21 +7,21 @@
 <section class="w3-section">
   {% if user.is_authenticated %}
     <a class="btn btn-default" href="{% url 'structuredname-edit' pk=structuredname.pk %}"><span class="fa fa-pencil-square-o"></span></a>
-    <a class="btn btn-default" href="{% url 'structuredname-delete' pk=structuredname.pk %}"><span class="fa  fa-trash-o"></span></a>          
+    <a class="btn btn-default" href="{% url 'structuredname-delete' pk=structuredname.pk %}"><span class="fa  fa-trash-o"></span></a>
   {% endif %}
-
+  <p><a href="{{request.META.HTTP_REFERER}}">Go back</a></p>
    <header style="display:none;">
-      <h2>RNames - Structured Name #{{ structuredname.id }}</h2>
+      <h2>RNames - Structured Name: {{ structuredname.id }}</h2>
    </header>
    <table class="w3-table-all">
       <caption>Structured Name: {{ structuredname.id }}</caption>
       <tr>
-         <th>Qualifier</th>
-         <td>{{ structuredname.qualifier }}</td>
-      </tr>
-      <tr>
          <th>Name</th>
          <td>{{ structuredname.name }}</td>
+      </tr>
+      <tr>
+         <th>Qualifier</th>
+         <td>{{ structuredname.qualifier }}</td>
       </tr>
       <tr>
          <th>Location</th>
