--- a/rnames_app/templates/relation_edit.html
+++ b/rnames_app/templates/relation_edit.html
@@ -9,7 +9,7 @@
 <!-- Write your comments here -->
   <article>
     {% if user.is_authenticated %}
-      <h2>Edit Relation</h2>
+      <h2>Add/Edit Relation</h2>
       <form method="POST" class="relation-form">{% csrf_token %}
         <table class="w3-table-all">
           {{ form.as_table }}
