--- a/rnames_app/templates/structuredname_edit.html
+++ b/rnames_app/templates/structuredname_edit.html
@@ -9,7 +9,7 @@
 <!-- Write your comments here -->
   <article>
     {% if user.is_authenticated %}
-      <h2>Edit Structured Name</h2>
+      <h2>Add/Edit Structured Name</h2>
       <form method="POST" class="name-form">{% csrf_token %}
         <table class="w3-table">
           {{ form.as_table }}
